# florence-announcement-system

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: announcement.rs  main.rs  recurring.rs  routes.rs
static/root/: index.html  script.js  style.css
static/root/admin/: index.html  script.js
static/root/dashboard/: index.html  script.js
