[package]
name = "florence-announcement-system"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2" , features = ["cookie-session"] }
actix-web = "4.2.1"
env_logger = "0.9.3"
log = "0.4.17"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
serde = { version = "1.0.147", features = ["derive"] }
#sqlite = "0.30.3"
